--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,26 +1,56 @@
-html {
-    background-color: rgba(27, 38, 54, 1);
-    text-align: center;
-    color: white;
+:root {
+    --light-gray: rgb(220, 220, 220);
+    --gray: rgb(117, 117, 117);
+    --dark-gray: rgb(34, 34, 34);
 }
 
 body {
+    background-color: var(--dark-gray);
     margin: 0;
-    color: white;
-    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
 }
 
-@font-face {
-    font-family: "Nunito";
-    font-style: normal;
-    font-weight: 400;
-    src: local(""),
-    url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
+#nav-bar {
+    display: flex;
+    float: left;
+    height: 45px;
+    justify-content: center;
+    justify-items: center;
+    width: 571px;
 }
 
-#app {
-    height: 100vh;
-    text-align: center;
+#magnifying-glass {
+    margin: 14px;
+    margin-bottom: 13px;
+}
+
+::placeholder {
+    color: var(--gray);
+}
+
+#search-bar {
+    background-color: var(--dark-gray);
+    border: none;
+    box-sizing: border-box;
+    color: var(--light-gray);
+    font-size: 15px;
+    height: 45px;
+    outline: none;
+    padding: 0;
+    width: 479px;
+}
+
+#page {
+    color: var(--gray);
+    display: inline;
+    margin: 11px;
+    margin-top: 12px;
+}
+
+#seperator {
+    background-color: var(--gray);
+    display: flex;
+    height: 1px;
+    margin-left: 2px;
+    margin-right: 2px;
+    width: 567px;
 }
