--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -19,8 +19,9 @@ body {
 }
 
 #magnifying-glass {
-    margin: 14px;
-    margin-bottom: 13px;
+    margin: 15px;
+    margin-left: 14px;
+    margin-bottom: 14px;
 }
 
 ::placeholder {
@@ -53,4 +54,79 @@ body {
     margin-left: 2px;
     margin-right: 2px;
     width: 567px;
+}
+
+/* loading icon taken and minified from: https://loading.io/css/ */
+#loading-icon {
+    margin-top: 7px;
+    margin-bottom: 6px;
+    margin-left: 7px;
+    margin-right: 6px;
+    width: 32px;
+    height: 32px;
+}
+.loading-grid {
+    display: inline-block;
+    position: relative;
+}
+.loading-grid div {
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #fff;
+    animation: loading-grid 1.2s linear infinite;
+}
+.loading-grid div:nth-child(1) {
+    top: 3px;
+    left: 3px;
+    animation-delay: 0s;
+}
+.loading-grid div:nth-child(2) {
+    top: 3px;
+    left: 13px;
+    animation-delay: -0.4s;
+}
+.loading-grid div:nth-child(3) {
+    top: 3px;
+    left: 23px;
+    animation-delay: -0.8s;
+}
+.loading-grid div:nth-child(4) {
+    top: 13px;
+    left: 3px;
+    animation-delay: -0.4s;
+}
+.loading-grid div:nth-child(5) {
+    top: 13px;
+    left: 13px;
+    animation-delay: -0.8s;
+}
+.loading-grid div:nth-child(6) {
+    top: 13px;
+    left: 23px;
+    animation-delay: -1.2s;
+}
+.loading-grid div:nth-child(7) {
+    top: 23px;
+    left: 3px;
+    animation-delay: -0.8s;
+}
+.loading-grid div:nth-child(8) {
+    top: 23px;
+    left: 13px;
+    animation-delay: -1.2s;
+}
+.loading-grid div:nth-child(9) {
+    top: 23px;
+    left: 23px;
+    animation-delay: -1.6s;
+}
+@keyframes loading-grid {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
 }
