--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -9,6 +9,8 @@ body {
     margin: 0;
 }
 
+/* <----------------------------------------------------------------------------------------------------> */
+
 #nav-bar {
     display: flex;
     float: left;
@@ -24,10 +26,6 @@ body {
     margin-bottom: 14px;
 }
 
-::placeholder {
-    color: var(--gray);
-}
-
 #search-bar {
     background-color: var(--dark-gray);
     border: none;
@@ -40,11 +38,8 @@ body {
     width: 479px;
 }
 
-#page {
+#search-bar::placeholder {
     color: var(--gray);
-    display: inline;
-    margin: 11px;
-    margin-top: 12px;
 }
 
 #seperator {
@@ -54,79 +49,4 @@ body {
     margin-left: 2px;
     margin-right: 2px;
     width: 567px;
-}
-
-/* loading icon taken and minified from: https://loading.io/css/ */
-#loading-icon {
-    margin-top: 7px;
-    margin-bottom: 6px;
-    margin-left: 7px;
-    margin-right: 6px;
-    width: 32px;
-    height: 32px;
-}
-.loading-grid {
-    display: inline-block;
-    position: relative;
-}
-.loading-grid div {
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background: #fff;
-    animation: loading-grid 1.2s linear infinite;
-}
-.loading-grid div:nth-child(1) {
-    top: 3px;
-    left: 3px;
-    animation-delay: 0s;
-}
-.loading-grid div:nth-child(2) {
-    top: 3px;
-    left: 13px;
-    animation-delay: -0.4s;
-}
-.loading-grid div:nth-child(3) {
-    top: 3px;
-    left: 23px;
-    animation-delay: -0.8s;
-}
-.loading-grid div:nth-child(4) {
-    top: 13px;
-    left: 3px;
-    animation-delay: -0.4s;
-}
-.loading-grid div:nth-child(5) {
-    top: 13px;
-    left: 13px;
-    animation-delay: -0.8s;
-}
-.loading-grid div:nth-child(6) {
-    top: 13px;
-    left: 23px;
-    animation-delay: -1.2s;
-}
-.loading-grid div:nth-child(7) {
-    top: 23px;
-    left: 3px;
-    animation-delay: -0.8s;
-}
-.loading-grid div:nth-child(8) {
-    top: 23px;
-    left: 13px;
-    animation-delay: -1.2s;
-}
-.loading-grid div:nth-child(9) {
-    top: 23px;
-    left: 23px;
-    animation-delay: -1.6s;
-}
-@keyframes loading-grid {
-    0%, 100% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0.5;
-    }
 }
