--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -36,6 +36,7 @@ body {
 #right-section {
     width: 32px;
     height: 32px;
+    margin: 6px;
 }
 
 #right-icon {
@@ -44,6 +45,10 @@ body {
 
 .icon-clickable {
     cursor: pointer;
+}
+
+.hide {
+    display: none;
 }
 
 /* the search bar takes 482x44 */
