--- a/frontend/styles/component.css
+++ b/frontend/styles/component.css
@@ -76,3 +76,46 @@
 .webSearch {
     color: rgb(40, 153, 255); 
 }
+
+.tooltip {
+    position: relative;
+}
+
+.tooltip .tooltiptext {
+    background-color: var(--dark-gray);
+    border-radius: 10px;
+    bottom: calc(60% + 10px);
+    box-shadow: 8px -8px 16px rgba(0, 0, 0, 0.8);
+    left: 50%;
+    max-width: 478px;
+    opacity: 0;
+    padding: 3px 6px;
+    position: absolute;
+    transform: translateX(-50%);
+    transition: opacity 0.2s ease-in-out, visibility 0s linear 0.2s;
+    visibility: hidden;
+    white-space: normal;
+    z-index: 1;
+
+    color: var(--light-gray);
+    font-size: smaller;
+    text-align: center;
+    overflow-wrap: break-word;
+}
+
+.tooltip:hover .tooltiptext {
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out 1s, visibility 0s linear 1s;
+    visibility: visible;
+}
+
+.tooltip .tooltiptext::after {
+    border-color: var(--dark-gray) transparent transparent transparent;
+    border-style: solid;
+    border-width: 7px;
+    content: "";
+    left: 50%;
+    margin-left: -7px;
+    position: absolute;
+    top: 100%;
+}
