--- a/frontend/styles/searchicons.css
+++ b/frontend/styles/searchicons.css
@@ -1,77 +1,80 @@
 /* loading icon taken and minified from: https://loading.io/css/ */
 .loading-grid {
-    display: inline-block;
-    position: relative;
+	display: inline-block;
+	position: relative;
 }
 
 @keyframes loading-grid {
-    0%, 100% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0.5;
-    }
+
+	0%,
+	100% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: 0.5;
+	}
 }
 
 .loading-grid div {
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background: #fff;
-    animation: loading-grid 1.2s linear infinite;
+	position: absolute;
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	background: #fff;
+	animation: loading-grid 1.2s linear infinite;
 }
 
 .loading-grid div:nth-child(1) {
-    top: 3px;
-    left: 3px;
-    animation-delay: 0s;
+	top: 3px;
+	left: 3px;
+	animation-delay: 0s;
 }
 
 .loading-grid div:nth-child(2) {
-    top: 3px;
-    left: 13px;
-    animation-delay: -0.4s;
+	top: 3px;
+	left: 13px;
+	animation-delay: -0.4s;
 }
 
 .loading-grid div:nth-child(3) {
-    top: 3px;
-    left: 23px;
-    animation-delay: -0.8s;
+	top: 3px;
+	left: 23px;
+	animation-delay: -0.8s;
 }
 
 .loading-grid div:nth-child(4) {
-    top: 13px;
-    left: 3px;
-    animation-delay: -0.4s;
+	top: 13px;
+	left: 3px;
+	animation-delay: -0.4s;
 }
 
 .loading-grid div:nth-child(5) {
-    top: 13px;
-    left: 13px;
-    animation-delay: -0.8s;
+	top: 13px;
+	left: 13px;
+	animation-delay: -0.8s;
 }
 
 .loading-grid div:nth-child(6) {
-    top: 13px;
-    left: 23px;
-    animation-delay: -1.2s;
+	top: 13px;
+	left: 23px;
+	animation-delay: -1.2s;
 }
 
 .loading-grid div:nth-child(7) {
-    top: 23px;
-    left: 3px;
-    animation-delay: -0.8s;
+	top: 23px;
+	left: 3px;
+	animation-delay: -0.8s;
 }
 
 .loading-grid div:nth-child(8) {
-    top: 23px;
-    left: 13px;
-    animation-delay: -1.2s;
+	top: 23px;
+	left: 13px;
+	animation-delay: -1.2s;
 }
 
 .loading-grid div:nth-child(9) {
-    top: 23px;
-    left: 23px;
-    animation-delay: -1.6s;
+	top: 23px;
+	left: 23px;
+	animation-delay: -1.6s;
 }
