--- a/frontend/styles/component.css
+++ b/frontend/styles/component.css
@@ -22,8 +22,6 @@
 
 /* the component image takes 44x40 */
 .compImg {
-	/* width: 32;
-	height: 32; */
 	margin: 6px;
 	margin-right: 8px;
 	margin-left: 8px;
@@ -39,7 +37,7 @@
 	margin-top: 12px;
 	margin-bottom: 8px;
 
-	font-size: 16px;
+	font-size: 14px;
 }
 
 /* the component name takes max 300x40 */
@@ -57,6 +55,7 @@
 /* the component seperator takes max 25x40 */
 .compSep {
 	width: 1px;
+	min-width: 1px;
 	height: 16px;
 	margin-right: 12px;
 	margin-left: 12px;
